# Styio

./: .gitignore  CMakeLists.txt  DEPENDENCY-USAGE.md  LICENSE-POLICY.md  README.md  extend_tests.py
.github/workflows/: ci.yml  nightly-fuzz.yml  nightly-sanitizers.yml  nightly-soak.yml  repo-hygiene.yml  styio-audit.yml  styio-ci-gate.yml
benchmark/: CMakeLists.txt  COVERAGE-MATRIX.md  README.md  REGRESSION-TEMPLATE.md  parser-shadow-m1-gate.sh  parser-shadow-suite-gate.sh  perf-report.py  perf-route.sh  soak-minimize.sh  styio_soak_test.cpp
benchmark/regressions/: README.md
benchmark/reports/: README.md
cmake/: StyioGoogleTest.cmake  StyioTreeSitter.cmake
configs/: repo-hygiene-allowlist.txt  styio-nano-default.toml  styio-nano-package-cloud-example.toml  styio-nano-package-local-example.toml  styio-nano-publish-example.toml
docs/: BUILD-AND-DEV-ENV.md  INDEX.md  README.md
docs/adr/: ADR-0001-checkpoint-process.md  ADR-0002-jsonl-diagnostics.md  ADR-0003-llvm-ownership-boundary.md  ADR-0004-unicode-facade.md  ADR-0005-runtime-path-compat-and-error-flag.md  ADR-0006-session-reset-and-ast-attach-boundary.md  ADR-0007-expr-node-raii-binop-bincomp.md  ADR-0008-expr-node-raii-cond.md  ADR-0009-expr-node-raii-wave-fallback-selectors.md  ADR-0010-expr-node-raii-func-call.md  ADR-0011-expr-node-raii-listop-attr.md  ADR-0012-expr-node-raii-fmtstr-typeconvert-range-sizeof.md  ADR-0013-expr-node-raii-tuple-list-set.md  ADR-0014-stmt-node-raii-return-bind.md  ADR-0015-stmt-node-raii-resource-io.md  ADR-0016-stmt-node-raii-var-family.md  ADR-0017-stmt-node-raii-struct-resource.md  ADR-0018-soak-single-thread-framework.md  ADR-0019-soak-tiering-and-rss-guard.md  ADR-0020-soak-regression-artifact-workflow.md  ADR-0021-parser-engine-shadow-routing.md  ADR-0022-parser-lookahead-shared-utils.md  ADR-0023-parser-expr-subset-shadow-guard.md  ADR-0024-parser-stmt-subset-print-shadow.md  ADR-0025-parser-stmt-subset-flexbind-and-call-fallback.md  ADR-0026-parser-final-bind-subset-and-safe-fallback.md  ADR-0027-parser-shadow-compare-mode.md  ADR-0028-parser-compound-assign-subset.md  ADR-0029-parser-shadow-full-m1-and-bool-literal-alignment.md  ADR-0030-parser-shadow-artifact-recording.md  ADR-0031-parser-default-switch-gate.md  ADR-0032-parser-shadow-budget-script.md  ADR-0033-parser-compare-logic-subset-alignment.md  ADR-0034-refactor-template-shadow-gate-pattern.md  ADR-0035-parser-simple-call-subset-and-dot-fallback.md  ADR-0036-parser-dot-call-subset-with-chain-fallback.md  ADR-0037-parser-shadow-summary-artifact.md  ADR-0038-parser-dot-chain-rejection-boundary.md  ADR-0039-parser-function-def-entry-subset.md  ADR-0040-parser-m2-shadow-gate.md  (+82 more)
docs/archive/: ARCHIVE-LEDGER.md  ARCHIVE-MANIFEST.json  INDEX.md  README.md
docs/assets/: INDEX.md  README.md
docs/audit/: EXTERNAL-AUDIT-2026-04-22.md  INDEX.md  README.md
docs/design/: INDEX.md  README.md  Styio-EBNF.md  Styio-Handle-Capability-Type-System.md  Styio-Language-Design.md  Styio-Research-Innovations.md  Styio-Resource-Driver.md  Styio-Resource-Topology.md  Styio-StdLib-Intrinsics.md  Styio-Symbol-Reference.md  performance-testing.md
docs/for-ide/: BUILD.md  CXX-API.md  INDEX.md  LSP.md  README.md  TESTING.md  TREE-SITTER.md
docs/for_spio/: INDEX.md  README.md  Styio-Nano-Spio-Coordination.md
docs/history/: 2026-04-14.md  2026-04-16.md  2026-04-17.md  INDEX.md  README.md
docs/milestones/: INDEX.md  README.md
docs/plans/: BoundedRing-Codegen-Adjustment.md  Early-Ideas.md  IDE-Incremental-Edits-and-Semantic-Query-Cache-Implementation-Plan-CN.md  IDE-Incremental-Edits-and-Semantic-Query-Cache-Implementation-Plan.md  INDEX.md  Next-Stage-Checkpoint-Tree.md  README.md  Resource-Topology-v2-Implementation-Plan.md  Standard-Streams-Plan.md  Styio-Ecosystem-Bootstrap-Plan.md  Styio-Ecosystem-CLI-Contract-Matrix.md  Styio-Ecosystem-Delivery-Master-Plan.md  Styio-Ecosystem-File-Governance-Alignment-Plan.md  Styio-Spio-Dual-Channel-Source-Build-Implementation-Plan.md
docs/review/: INDEX.md  Logic-Conflicts.md  README.md
docs/rollups/: CURRENT-STATE.md  HISTORICAL-LESSONS.md  INDEX.md  NEXT-STAGE-GAP-LEDGER.md  README.md
docs/specs/: AGENT-SPEC.md  DOCUMENTATION-POLICY.md  INDEX.md  PRINCIPLES-AND-OBJECTIVES.md  README.md  REPOSITORY-MAP.md  TECHNOLOGY-COMPONENT-INVENTORY.md  THIRD-PARTY.md
docs/teams/: CLI-NANO-RUNBOOK.md  CODEGEN-RUNTIME-RUNBOOK.md  COORDINATION-RUNBOOK.md  DOC-STATS.md  DOCS-ECOSYSTEM-RUNBOOK.md  FRONTEND-RUNBOOK.md  GRAMMAR-RUNBOOK.md  (+6 more)
example/: cli_calculator.sh  cli_calculator.styio
scripts/: bootstrap-dev-env.sh  checkpoint-health.sh  cleanup-builds.sh  delivery-gate.sh  dev-report.sh  docs-audit.py  docs-index.py  docs-lifecycle.py  docs_config.py  ecosystem-cli-doc-gate.py  fuzz-regression-pack.sh  gen-styio-nano-profile.py  ide-fuzz-gate.sh  ide-perf-gate.sh  ide-quality-gate.sh  install-repo-hygiene-hooks.sh  parser-legacy-entry-audit.sh  parser-shadow-m1-gate.sh  parser-shadow-suite-gate.sh  perf-route.sh  repo-hygiene-gate.py  runtime-surface-gate.py  soak-minimize.sh  team-docs-gate.py  workflow-scheduler.py
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  styio_test.cpp  workflow_scheduler_test.py
tests/fuzz/: CMakeLists.txt  README.md  REGRESSION-TEMPLATE.md  fuzz_ide_common.hpp  fuzz_ide_completion.cpp  fuzz_ide_lsp_sync.cpp  fuzz_ide_syntax.cpp  fuzz_ide_targets_smoke.sh  fuzz_lexer.cpp  fuzz_parser.cpp  fuzz_regression_pack_smoke.sh  fuzz_smoke_main.cpp  fuzz_smoke_runner.sh
tests/fuzz/corpus/ide_completion/: seed-basic.styio  seed-malformed-binop.styio  seed-member.styio
tests/fuzz/corpus/ide_lsp_sync/: seed-multi-line.styio
tests/fuzz/corpus/ide_syntax/: seed-recovery.styio
tests/fuzz/corpus/lexer/: seed-basic.styio  seed-comment-edge.styio
tests/fuzz/corpus/parser/: seed-assign-print.styio  seed-func.styio  seed-malformed-stmt-prefix.styio  seed-match-no-default.styio
workflows/: ADD-RESOURCE-IDENTIFIER.md  ADD-RESOURCE-IDENTIFIER.toml  DELIVERY-GATE.md  DELIVERY-GATE.toml  INDEX.md  REPO-HYGIENE-COMMIT-STANDARD.md  TEST-CATALOG.md  TEST-CATALOG.toml
(+348 files in other folders)
